--- a/src/ListenTogether/Controls/Player.xaml
+++ b/src/ListenTogether/Controls/Player.xaml
@@ -12,8 +12,11 @@
                                      Orientation="Horizontal">
 
                             <Image x:Name="ImgCurrentMusic"
-                                   WidthRequest="60"
-                                   ></Image>
+                                   WidthRequest="60">
+                                <Image.GestureRecognizers>
+                                    <TapGestureRecognizer Tapped="ImgPlaying_Tapped"/>
+                                </Image.GestureRecognizers>
+                            </Image>
                             <StackLayout Margin="10,0,0,0">
                                 <Label x:Name="LblMusicName"
                                        Margin="0,10,0,0"
@@ -150,7 +153,11 @@
 
                             <Image WidthRequest="30"
                                    HorizontalOptions="Start"
-                                   Source="{Binding Source, Source={x:Reference ImgCurrentMusic}}"/>
+                                   Source="{Binding Source, Source={x:Reference ImgCurrentMusic}}">
+                                <Image.GestureRecognizers>
+                                    <TapGestureRecognizer Tapped="ImgPlaying_Tapped"/>
+                                </Image.GestureRecognizers>
+                            </Image>
 
                             <Label Margin="5,0,0,0"
                                    HorizontalOptions="StartAndExpand"
