--- a/src/ListenTogether/Pages/PlayingPage.xaml
+++ b/src/ListenTogether/Pages/PlayingPage.xaml
@@ -4,6 +4,7 @@
              xmlns:viewmodels="clr-namespace:ListenTogether.ViewModels"
              xmlns:services="clr-namespace:ListenTogether.Services"
              xmlns:controls="clr-namespace:ListenTogether.Controls"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="ListenTogether.Pages.PlayingPage"
              Title="正在播放"
              BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBackground},Light={StaticResource LightBackground}}">
@@ -106,8 +107,12 @@
                                     EmptyView="暂无歌词"
                                     ItemsSource="{Binding Lyrics}"
                                     HorizontalOptions="Center"
-                                    SelectionMode="None"
-                                    Scrolled="ListLyrics_Scrolled">
+                                    SelectionMode="None">
+                    <CollectionView.Behaviors>
+                        <toolkit:EventToCommandBehavior EventName="Scrolled"
+                                                        Command="{Binding LyricsScrolledCommand}"/>
+
+                    </CollectionView.Behaviors>
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
                             <StackLayout HorizontalOptions="Center">
